--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section id="testimonial">
    <div class="container">
         <div class="row text-center">
-            <h2 style="font-family: 'Lobster', cursive;"><span class="ion-minus" ></span>What are clients say...<span class="ion-minus"></span></h2>
+            <h2 style="font-family: 'Lobster', cursive;"><span class="ion-minus" ></span>What our clients say...<span class="ion-minus"></span></h2>
             		<div class="row">
                			<div class="testimonial-part">
                    		<div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
